demo-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
  labels:
    application: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      application: demo-app
  template:
    metadata:
      labels:
        application: demo-app
    spec:
      containers:
      - name: demo-app
        image: index.docker.io/iconebhub/node-demo-app
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: demo-app
  name: demo-app-serviceip
  namespace: simpledemok8s
spec:
  ports:
    - name: external
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    application: demo-app
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-036ca717aae34d87c,subnet-05cb69327d7954538,subnet-0740acf28eeb04a3c
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    application: demo-app
  name: demo-app
  namespace: simpledemok8s
spec:
  rules:
    - host: node-demo-app.simpledemok8s.org1.fnebiolo.myinstance.com
      http:
        paths:
          - backend:
              serviceName: demo-app-serviceip
              servicePort: 80
# trigger spinnaker commit
